fixed some stupid.